[package]
name = "grecian-computer"
version = "0.1.0"
edition = "2021"
authors = ["Gary Tou <gary@garytou.com>"]
readme = "README.md"
repository = "https://github.com/garyhtou/grecian-computer/"
homepage = "https://github.com/garyhtou/grecian-computer/"
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
