[package]
name = "grecian-computer"
version = "0.1.0"
edition = "2021"
authors = ["Gary Tou <gary@garytou.com>"]
readme = "README.md"
repository = "https://github.com/garyhtou/grecian-computer/"
homepage = "https://github.com/garyhtou/grecian-computer/"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
